syntax = "proto3";
package stateset.core.orders;

option go_package = "github.com/stateset/core/x/orders/types";

import "gogoproto/gogo.proto";
import "stateset/core/orders/orders.proto";

// Query defines the gRPC querier service for orders.
service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse);
  rpc Order(QueryOrderRequest) returns (QueryOrderResponse);
  rpc Orders(QueryOrdersRequest) returns (QueryOrdersResponse);
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryOrderRequest {
  uint64 id = 1;
}

message QueryOrderResponse {
  Order order = 1 [(gogoproto.nullable) = false];
}

message QueryOrdersRequest {
  string customer = 1;
  string merchant = 2;
  string status = 3;
  uint64 offset = 4;
  uint64 limit = 5;
}

message QueryOrdersResponse {
  repeated Order orders = 1 [(gogoproto.nullable) = false];
  uint64 total = 2;
}
